Remove Facebook OAuth, add security middleware, cleanup dependencies
